--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Hello Dev!</h1>
     <p>This is the landing page of <strong>Dev</strong>.</p>
     <p>Essa página substitui a página de teste do Apache.</p>
-    <p>Se você chegou até aqui é porque seu servidor web com Apache2, PHP 8.1 e MySQL Server, rodando em distribuição
-      Ubuntu 22.04 LTS para WSL2, foi
+    <p>Se você chegou até aqui é porque seu servidor web com Apache2, PHP 8.1 e MySQL Server, rodando em Ubuntu 22.04.2
+      LTS (GNU/Linux 5.15.90.1-microsoft-standard-WSL2 x86_64), foi
       instalado e configurado com sucesso.</p>
     <p>Parabéns Dev!</p>
     <p>Inicie seu servidor apache com: <code>$ sudo systemctl start apache2</code></p>
